--- a/sec45/app/views/products/new.ejs
+++ b/sec45/app/views/products/new.ejs
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <h1>Add A Product</h1>
-    <form action="/products" method="POST">
+    <h1><%= farm.name %></h1>
+    <h2>Add a Product</h2>
+    <form action="/farms/<%=farm._id%>/products" method="POST">
         <label for="name">Product Name</label>
         <input type="text" name="name" id="name" placeholder="product name">
         <label for="price">Price (Unit)</label>
@@ -20,9 +21,9 @@
             <option value="<%=category%>"><%=category%></option>
             <% } %>
         </select>
-        <button>Submit</button>
+        <button>Submit</button>        
     </form>
-
+    <a href="/farms/<%=farm._id%>">Back To Farm</a>
 </body>
 
 </html>
