--- a/teste/views/pessoas/new.ejs
+++ b/teste/views/pessoas/new.ejs
@@ -20,5 +20,18 @@
      <form action="/pessoas/?_method=DELETE" method = "POST">        
         <input type = "submit" value = "Deletar">
      </form>
+
+     <h1>Lista de Pessoas</h1>
+     
+     <hr>
+     
+     <ul>
+         <% for(let pessoa of pessoas) { %> 
+             <li><%= pessoa.pessoaNome %> </li>
+         <% } %> 
+     </ul>
+     
+     <hr>
+     
 </body>
 </html>
