--- a/06getmethod/views/people/new.ejs
+++ b/06getmethod/views/people/new.ejs
@@ -2,6 +2,7 @@
    <body>
       
       <form action = "/people" method = "GET">
+         <!-- Aqui o melhor padrão para o name seria name="people[firstName]" -->
          First Name: <input type = "text" name = "first_name">  <br>
          Last Name: <input type = "text" name = "last_name">
          <input type = "submit" value = "Submit">
