--- a/cadastro/views/cadastros/new.ejs
+++ b/cadastro/views/cadastros/new.ejs
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de cadastro</title>
+    <script src="/javascripts/valida.js"></script> 
 </head>
-<body>
+<body>    
     <form action="/cadastros" method="POST">
         Nome:           <input type="text" name="cadastro[nome]">           <br>
         CPF:            <input type="text" name="cadastro[cpf]">            <br>
@@ -18,6 +19,6 @@
         Número:         <input type="text" name="cadastro[numero]">         <br>
         Complemento:    <input type="text" name="cadastro[complemento]">    <br>
         <input type="submit" value="Enviar">
-    </form>   
+    </form> 
 </body>
 </html>
