--- a/17inserindo/views/people/index.ejs
+++ b/17inserindo/views/people/index.ejs
@@ -10,7 +10,7 @@
     <h1>Peoples</h1>
     <ul>
         <% for(let people of peoples) { %>
-            <li><%= people.first_name %> <%= people.last_name %> <%= people.score %></li>
+            <li><%= people.firstName %> <%= people.lastName %> <%= people.score %></li>
         <% } %> 
     </ul>     
 </body>
