--- a/17inserindo/views/people/new.ejs
+++ b/17inserindo/views/people/new.ejs
@@ -2,9 +2,9 @@
    <body>
       <h1>Add a People</h1>
       <form action = "/peoples" method = "POST">
-         First Name: <input type = "text" name = "first_name">  <br>
-         Last Name: <input type = "text" name = "last_name"> <br>
-         Score: <input type = "number" name = "score">  <br>         
+         First Name: <input type = "text" name = "people[firstName]">  <br>
+         Last Name: <input type = "text" name = "people[lastName]"> <br>
+         Score: <input type = "number" name = "people[score]">  <br>         
          <input type = "submit" value = "Submit">
       </form>
       
