--- a/cadastro/views/cadastros/new.ejs
+++ b/cadastro/views/cadastros/new.ejs
@@ -9,15 +9,15 @@
 </head>
 <body>    
     <form action="/cadastros" method="POST">
-        Nome:           <input type="text" name="cadastro[nome]">           <br>
-        CPF:            <input type="text" name="cadastro[cpf]">            <br>
-        Email:          <input type="text" name="cadastro[email]">          <br>
-        Celular:        <input type="text" name="cadastro[celular]">        <br>
-        Telefone:       <input type="text" name="cadastro[telefone]">       <br>
-        Bairro:         <input type="text" name="cadastro[bairro]">         <br>
-        Rua:            <input type="text" name="cadastro[rua]">            <br>
-        Número:         <input type="text" name="cadastro[numero]">         <br>
-        Complemento:    <input type="text" name="cadastro[complemento]">    <br>
+        Nome:           <input type="text" id="cadastroNome" name="cadastro[cadastroNome]">                 <br>
+        CPF:            <input type="text" id="cadastroCpf" name="cadastro[cadastroCpf]">                   <br>
+        Email:          <input type="text" id="cadastroEmail" name="cadastro[cadastroEmail]">               <br>
+        Celular:        <input type="text" id="cadastroCelular" name="cadastro[cadastroCelular]">           <br>
+        Telefone:       <input type="text" id="cadastroTelefone" name="cadastro[cadastroTelefone]">         <br>
+        Bairro:         <input type="text" id="cadastroBairro" name="cadastro[cadastroBairro]">             <br>
+        Rua:            <input type="text" id="cadastroRua" name="cadastro[cadastroRua]">                   <br>
+        Número:         <input type="text" id="cadastroNumero" name="cadastro[cadastroNumero]">             <br>
+        Complemento:    <input type="text" id="cadastroComplemento" name="cadastro[cadastroComplemento]">   <br>
         <input type="submit" value="Enviar">
     </form> 
 </body>
