--- a/cadastro/views/cadastros/list.ejs
+++ b/cadastro/views/cadastros/list.ejs
@@ -10,7 +10,7 @@
     <h1>Lista de cadastros</h1>
 
     <% for(let cadastro of cadastros) { %> 
-        <li><%= cadastro.cadastroNome %> </li>
+        <li><a href="cadastros/<%= cadastro._id %>"><%= cadastro.cadastroNome %></a></li>
     <% } %> 
       
     <form class="d-inline" action="/cadastros/?_method=DELETE" method="POST">
