--- a/cadastro/views/cadastros/details.ejs
+++ b/cadastro/views/cadastros/details.ejs
@@ -1,27 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
-</head>
-<body>
-    <h1>Details of <%= cadastro.cadastroNome  %> </h1>
-    <ul>
-        <li>CPF: <%= cadastro.cadastroCpf  %> </li>
-        <li>Email: <%= cadastro.cadastroEmail  %> </li>
-        <li>Celular: <%= cadastro.cadastroCelular  %> </li>
-        <li>Telefone Fixo: <%= cadastro.cadastroTelefone  %> </li>
-        <li>Bairro: <%= cadastro.cadastroBairro  %> </li>
-        <li>Rua: <%= cadastro.cadastroRua  %> </li>
-        <li>Número: <%= cadastro.cadastroNumero  %> </li>
-        <li>Complemento: <%= cadastro.cadastroComplemento  %> </li>       
-    </ul>
+<% layout('layouts/boilerplate')%> 
 
-    <a href="/cadastros/<%= cadastro._id%>/edit">Editar</a>
+<h1>Details of <%= cadastro.cadastroNome  %> </h1>
+<ul>
+    <li>CPF: <%= cadastro.cadastroCpf  %> </li>
+    <li>Email: <%= cadastro.cadastroEmail  %> </li>
+    <li>Celular: <%= cadastro.cadastroCelular  %> </li>
+    <li>Telefone Fixo: <%= cadastro.cadastroTelefone  %> </li>
+    <li>Bairro: <%= cadastro.cadastroBairro  %> </li>
+    <li>Rua: <%= cadastro.cadastroRua  %> </li>
+    <li>Número: <%= cadastro.cadastroNumero  %> </li>
+    <li>Complemento: <%= cadastro.cadastroComplemento  %> </li>       
+</ul>
 
-    <a href="/cadastros">Voltar</a>
+<a class="btn btn-warning" href="/cadastros/<%= cadastro._id%>/edit">Editar</a>
 
-</body>
-</html>
+<form class="d-inline" action="/cadastros/<%= cadastro._id%>?_method=DELETE" method="POST">
+    <button class="btn btn-danger">Delete</button>
+</form>
+
+<a class="btn btn-dark" href="/cadastros">Voltar</a>
+
