--- a/cadastro/views/cadastros/list.ejs
+++ b/cadastro/views/cadastros/list.ejs
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastros</title>
-</head>
-<body>
-    <h1>Lista de cadastros</h1>
+<% layout('layouts/boilerplate')%> 
+<h1>Lista de cadastros</h1>
 
-    <% for(let cadastro of cadastros) { %> 
-        <li><a href="cadastros/<%= cadastro._id %>"><%= cadastro.cadastroNome %></a></li>
-    <% } %> 
-      
-    <form class="d-inline" action="/cadastros/?_method=DELETE" method="POST">
-        <button class="btn btn-danger">Delete</button>
-    </form>
-      
-   </body>
-</html>
+<% for(let cadastro of cadastros) { %> 
+    <li><a href="cadastros/<%= cadastro._id %>"><%= cadastro.cadastroNome %></a></li>
+<% } %> 
