--- a/cadastro/views/cadastros/edit.ejs
+++ b/cadastro/views/cadastros/edit.ejs
@@ -1,60 +1,156 @@
 <% layout('layouts/boilerplate')%>  
 <div class="row">
     <h1 class="text-center">Atualizar cadastro</h1>
-    <div class="col-6 offset-3">
+    <div class="col-6 offset-3">     
         <form action="/cadastros/<%= cadastro._id%>?_method=PUT" method="POST">
-            
+                <% if (message) { %>
+                    <%= message.body %> 
+                <% } %>         
             <div class="mb-3">
                 <label class="form-label" for="cadastroNome">Nome:</label>
-                <input class="form-control" type="text" id="cadastroNome" name="cadastro[cadastroNome]" value="<%= cadastro.cadastroNome %>">
+                <input 
+                    class="form-control  <%= errors.cadastroNome ? 'is-invalid' : '' %>" 
+                    type="text" id="cadastroNome" 
+                    name="cadastro[cadastroNome]"
+                    value="<%= formData.cadastroNome ? formData.cadastroNome: cadastro.cadastroNome %>"
+                >
+                <% if (errors.cadastroNome) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroNome[0] %>
+                    </div> 
+                <% } %>                             
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="cadastroCpf">Cpf:</label>
-                <input class="form-control" type="text" id="cadastroCpf" name="cadastro[cadastroCpf]" value="<%= cadastro.cadastroCpf %>">
+                <input 
+                    class="form-control  <%= errors.cadastroCpf ? 'is-invalid' : '' %>"  
+                    type="text" 
+                    id="cadastroCpf" 
+                    name="cadastro[cadastroCpf]"
+                    value="<%= formData.cadastroCpf ? formData.cadastroCpf: cadastro.cadastroCpf %>"
+                >
+                <% if (errors.cadastroCpf) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroCpf[0] %>
+                    </div> 
+                <% } %>  
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="cadastroEmail">Email:</label>
-                <input class="form-control" type="text" id="cadastroEmail" name="cadastro[cadastroEmail]" value="<%= cadastro.cadastroEmail %>">
+                <input 
+                    class="form-control  <%= errors.cadastroEmail ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    id="cadastroEmail" 
+                    name="cadastro[cadastroEmail]"
+                    value="<%= formData.cadastroEmail ? formData.cadastroEmail: cadastro.cadastroEmail %>"
+                >
+                <% if (errors.cadastroEmail) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroEmail[0] %>
+                    </div> 
+                <% } %>  
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="cadastroCelular">Celular:</label>
-                <input class="form-control" type="text" id="cadastroCelular" name="cadastro[cadastroCelular]" value="<%= cadastro.cadastroCelular %>">
+                <input 
+                    class="form-control  <%= errors.cadastroCelular ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    id="cadastroCelular" 
+                    name="cadastro[cadastroCelular]"
+                    value="<%= formData.cadastroCelular ? formData.cadastroCelular: cadastro.cadastroCelular %>"
+                >
+                <% if (errors.cadastroCelular) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroCelular[0] %>
+                    </div> 
+                <% } %>  
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="cadastroTelefone">Telefone:</label>
-                <input class="form-control" type="text" id="cadastroTelefone" name="cadastro[cadastroTelefone]" value="<%= cadastro.cadastroTelefone %>">
+                <input 
+                    class="form-control  <%= errors.cadastroTelefone ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    id="cadastroTelefone" 
+                    name="cadastro[cadastroTelefone]"
+                    value="<%= formData.cadastroTelefone ? formData.cadastroTelefone: cadastro.cadastroTelefone %>"
+                >
+                <% if (errors.cadastroTelefone) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroTelefone[0] %>
+                    </div> 
+                <% } %>  
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="cadastroBairro">Bairro:</label>
-                <input class="form-control" type="text" id="cadastroBairro" name="cadastro[cadastroBairro]" value="<%= cadastro.cadastroBairro %>">
+                <input 
+                    class="form-control  <%= errors.cadastroBairro ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    id="cadastroBairro" 
+                    name="cadastro[cadastroBairro]"
+                    value="<%= formData.cadastroBairro ? formData.cadastroBairro: cadastro.cadastroBairro %>"
+                >
+                <% if (errors.cadastroBairro) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroBairro[0] %>
+                    </div> 
+                <% } %>  
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="cadastroRua">Rua:</label>
-                <input class="form-control" type="text" id="cadastroRua" name="cadastro[cadastroRua]" value="<%= cadastro.cadastroRua %>">
+                <input 
+                    class="form-control  <%= errors.cadastroRua ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    id="cadastroRua" 
+                    name="cadastro[cadastroRua]"
+                    value="<%= formData.cadastroRua ? formData.cadastroRua: cadastro.cadastroRua %>"
+                >
+                <% if (errors.cadastroRua) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroRua[0] %>
+                    </div> 
+                <% } %>  
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="cadastroNumero">Numero:</label>
-                <input class="form-control" type="text" id="cadastroNumero" name="cadastro[cadastroNumero]" value="<%= cadastro.cadastroNumero %>">
+                <input 
+                    class="form-control  <%= errors.cadastroNumero ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    id="cadastroNumero" 
+                    name="cadastro[cadastroNumero]"
+                    value="<%= formData.cadastroNumero ? formData.cadastroNumero: cadastro.cadastroNumero %>"
+                >
+                <% if (errors.cadastroNumero) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroNumero[0] %>
+                    </div> 
+                <% } %>  
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="cadastroComplemento">Complemento:</label>
-                <input class="form-control" type="text" id="cadastroComplemento" name="cadastro[cadastroComplemento]" value="<%= cadastro.cadastroComplemento %>">
+                <input 
+                    class="form-control  <%= errors.cadastroComplemento ? 'is-invalid' : '' %>" 
+                    type="text" 
+                    id="cadastroComplemento" 
+                    name="cadastro[cadastroComplemento]"
+                    value="<%= formData.cadastroComplemento ? formData.cadastroComplemento: cadastro.cadastroComplemento %>"
+                >
+                <% if (errors.cadastroComplemento) { %>
+                    <div class="invalid-feedback">
+                        <%= errors.cadastroComplemento[0] %>
+                    </div> 
+                <% } %>  
             </div>
-              
-            <div class="mb-3">
-                <input class="btn btn-success" type="submit" value="Atualizar">
-                <a class="btn btn-dark" href="/cadastros">Voltar</a>
-            </div>
-            
-        
+                        
+            <input class="btn btn-success mb-3" type="submit" value="Enviar">
         </form> 
     </div>
 </div>
+
